feat: Posting Model created_at, updated_at자동생성을 위한 코드 추가

--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
     "password": "12345678",
     "database": "Sample",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "timezone": "+09:00"
   }
 }
