--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^2.2.5",
     "nunjucks": "^3.2.2",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
